--- a/2_process.ipynb
+++ b/2_process.ipynb
@@ -7526,7 +7526,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.2 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -7540,11 +7540,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0rc2"
+   "version": "3.8.2"
   },
   "vscode": {
    "interpreter": {
-    "hash": "b98d1416ba4af78ccc77dbb427d441ba2f2a9a9dd9e4ab7ae97c9f50ea8e7608"
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
    }
   }
  },
